ipynb: updated notebooks for code submission

--- a/precipitation-results.ipynb
+++ b/precipitation-results.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6f9ac98f-9896-41a1-b427-cb9ff633aaec",
+   "metadata": {},
+   "source": [
+    "### Curates the results from the precipitation experiment and produces preliminary plots (and tikz-code for plots)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a4935e14-6039-4e50-a89f-a5b70a6343fe",
@@ -9,6 +17,7 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
+    "# Since we run with multirun Hydra, you will need to provide the directory of the results here\n",
     "datadir = 'multirun/2024-01-24/18-51-46/'\n",
     "import pandas as pd\n",
     "import yaml\n",
