ipynb: updated notebooks to reflect refactor

--- a/precipitation-results.ipynb
+++ b/precipitation-results.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "from fastHGP.utils import load_model\n",
+    "from fasthgp.utils import load_model\n",
     "k = 8\n",
     "a = np.load(os.path.join(dirs[k], 'result.npz'))\n",
     "modelfile = os.path.join(dirs[k], 'model')\n",
@@ -266,7 +266,7 @@
    ],
    "source": [
     "import scipy.io as sio\n",
-    "from fastHGP.examples.precipitation import generate_data\n",
+    "from fasthgp.examples.precipitation import generate_data\n",
     "D = generate_data()\n",
     "data = sio.loadmat(\"data/data.mat\")\n",
     "X, y = data['x'], data['y']\n",
@@ -278,10 +278,10 @@
     "shgp_preds = []\n",
     "# Have to do batch predictions due to how GPJax works -- the returned GaussianDistribution would otherwise be 57000 dimensional, which is a bit large.\n",
     "for k in tqdm(range(3000, xtest.shape[0], 3000)):\n",
-    "    yhat, _ = shgp.predict(xtest[i:k], full_cov=False)\n",
+    "    yhat, _ = model.predict(xtest[i:k], full_cov=False)\n",
     "    i = k\n",
     "    shgp_preds.append(yhat.mean())\n",
-    "yhat, _ = shgp.predict(xtest[k:], full_cov=False)\n",
+    "yhat, _ = model.predict(xtest[k:], full_cov=False)\n",
     "shgp_preds.append(yhat.mean())\n",
     "shgp_preds = np.concatenate(shgp_preds)"
    ]
@@ -301,6 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from fasthgp.utils import load_model\n",
     "shgp = load_model(\"outputs/2024-01-22/10-59-43/shgp\")\n",
     "gp = load_model(\"outputs/2024-01-22/10-59-43/full_gp\")"
    ]
@@ -323,6 +324,8 @@
     "import cola\n",
     "import jax.numpy as jnp\n",
     "from gpjax.distributions import GaussianDistribution\n",
+    "from fasthgp.examples.precipitation import generate_data\n",
+    "D = generate_data()\n",
     "train_data = D\n",
     "x, y = train_data.X, train_data.y\n",
     "Kxx = gp.prior.kernel.gram(x)\n",
@@ -354,7 +357,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c775aa5c-f5ba-4d5d-9aea-e71506e0a0cc",
+   "id": "35f7d4e0-84a2-4cdf-9c4c-73256ce080c1",
+   "metadata": {},
+   "source": [
+    "#### HGP predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d3827357-1c3e-426a-8136-45f9e7abba54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "119f7a7000a64180b3ca85f45509bccd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import scipy.io as sio\n",
+    "data = sio.loadmat(\"data/data.mat\")\n",
+    "X, y = data['x'], data['y']\n",
+    "boundary = np.array([X.min(axis=0), X.max(axis=0)]) # For centering of the data\n",
+    "plotdata = sio.loadmat(\"data/usavertices.mat\") # Vertices to predict at\n",
+    "xtest = plotdata['vertices'] - boundary.mean(axis=0) # Center\n",
+    "i = 0\n",
+    "preds = []\n",
+    "# Have to do batch predictions due to how GPJax works -- the returned GaussianDistribution would otherwise be 57000 dimensional, which is a bit large.\n",
+    "for k in tqdm(range(5000, xtest.shape[0], 5000)):\n",
+    "    yhat, _ = shgp.predict(xtest[i:k], full_cov=False)\n",
+    "    i = k\n",
+    "    preds.append(yhat.mean())\n",
+    "yhat, _ = shgp.predict(xtest[k:], full_cov=False)\n",
+    "preds.append(yhat.mean())\n",
+    "preds = np.concatenate(preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Full GP predictions"
@@ -392,56 +442,6 @@
     "yhat = gp_predict(gp, xtest[k:])\n",
     "gp_preds.append(yhat.mean())\n",
     "gp_preds = np.concatenate(gp_preds)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35f7d4e0-84a2-4cdf-9c4c-73256ce080c1",
-   "metadata": {},
-   "source": [
-    "#### HGP predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d3827357-1c3e-426a-8136-45f9e7abba54",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "119f7a7000a64180b3ca85f45509bccd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/11 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import scipy.io as sio\n",
-    "from fastHGP.examples.precipitation import generate_data\n",
-    "D = generate_data()\n",
-    "data = sio.loadmat(\"data/data.mat\")\n",
-    "X, y = data['x'], data['y']\n",
-    "boundary = np.array([X.min(axis=0), X.max(axis=0)]) # For centering of the data\n",
-    "plotdata = sio.loadmat(\"data/usavertices.mat\") # Vertices to predict at\n",
-    "xtest = plotdata['vertices'] - boundary.mean(axis=0) # Center\n",
-    "i = 0\n",
-    "preds = []\n",
-    "# Have to do batch predictions due to how GPJax works -- the returned GaussianDistribution would otherwise be 57000 dimensional, which is a bit large.\n",
-    "for k in tqdm(range(5000, xtest.shape[0], 5000)):\n",
-    "    yhat, _ = model.predict(xtest[i:k], full_cov=False)\n",
-    "    i = k\n",
-    "    preds.append(yhat.mean())\n",
-    "yhat, _ = model.predict(xtest[k:], full_cov=False)\n",
-    "preds.append(yhat.mean())\n",
-    "preds = np.concatenate(preds)"
    ]
   },
   {
