--- a/underwater-magnetic-field.ipynb
+++ b/underwater-magnetic-field.ipynb
@@ -42,9 +42,9 @@
     "%matplotlib widget\n",
     "sns.set()\n",
     "# HGP\n",
-    "from fastHGP.hgp import HGP\n",
-    "from fastHGP.shgp import SHGP\n",
-    "from fastHGP.kernels import LaplaceBF, SE\n",
+    "from fasthgp.hgp import HGP\n",
+    "from fasthgp.shgp import SHGP\n",
+    "from fasthgp.kernels import LaplaceBF, SE\n",
     "key = jr.PRNGKey(13)\n",
     "# Random convenience\n",
     "from tqdm.notebook import tqdm"
@@ -148,7 +148,6 @@
    "source": [
     "import jax.scipy as jsp\n",
     "from gpjax.typing import ScalarFloat\n",
-    "from dataclasses import dataclass\n",
     "from cola.linalg.decompositions.decompositions import Cholesky\n",
     "\n",
     "# HGP objective (i.e. MLL -- utilizes pre-computed stuff)\n",
